补全minio安装过程和idea的配置